# PRISM-Plus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_stage1_bnd.py
configs/: stage1_bnd_plus.yaml  stage1_bnd_spatial.yaml  stage1_spatial_spr.yaml  stage1_v3.yaml  stage1_v4.yaml  stage1_v6.yaml  stage2a_nrg.yaml  stage3_lora.yaml  stage3_lora_robbyreal.yaml  stage4_tnsm.yaml  stage4_tnsm_robbyvla.yaml
models/: spatial_spr_bnd.py
prism_plus/: __init__.py  calibration_metrics.py  metrics.py  metrics_temporal.py
prism_plus/analysis/: __init__.py  proposition1.py
prism_plus/data/: __init__.py  bytecam_depth.py  dreds.py  gt_decompose.py  gt_decompose_wrapper.py  lingbot.py  multi_sensor.py  temporal_window.py
prism_plus/diffusion/: __init__.py
prism_plus/losses/: __init__.py  boundary.py  density.py  hpps.py  precision.py  v9_style.py
prism_plus/models/: __init__.py  bnd.py  bnd_plus.py  bnd_spatial.py  boundary.py  flow_utils.py  lora_spa.py  (+3 more)
scripts/: infer_nrg_v2.sh  lora_b5_sweep.sh  train_stage1.sh  train_stage1_v2.sh  train_stage1_v3.sh  train_stage1_v4.sh  train_stage1_v6.sh  train_stage2a.sh  train_stage3_lora.sh  train_stage3_lora_robbyreal.sh  train_stage4_tnsm.sh  train_stage4_tnsm_robbyvla.sh
tools/: diagnose_noise_hypothesis.py  gt_decompose_vis.py  infer_nrg_v2.py  infer_nrg_v9bnd.py  infer_tnsm_vis.py  infer_v9_bnd_vis.py  run_proposition1.py  train_bnd.py  train_bnd_plus.py  train_bnd_v3.py  train_bnd_v4.py  train_bnd_v6.py  train_bnd_v6_lora.py  train_bnd_v7_tnsm.py  train_nrg_v2.py
utils/: metrics_prism_plus.py
(+40 files in other folders)
